--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.1.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
