--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "ecom",
+  "name": "angu",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.5",
     "@angular/animations": "~7.0.0",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
@@ -20,9 +21,29 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.0",
+    "@types/jquery": "^3.2.12",
+    "aws-sdk": "^2.422.0",
+    "bcrypt": "^3.0.4",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.1.0",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
+    "jsonwebtoken": "^8.5.0",
+    "moment": "^2.24.0",
+    "mongoose": "^5.4.16",
+    "multer": "^1.4.1",
+    "multer-s3": "^2.9.0",
+    "ng2-daterangepicker": "^2.0.12",
+    "ng2-toastr": "^4.1.2",
+    "ng6-toastr-notifications": "^1.0.4",
+    "ngx-image-cropper": "^1.3.8",
+    "ngx-pipes": "^2.3.10",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.3.3",
+    "stripe": "^6.26.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
