--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.0",
+    "cloudinary": "^1.14.0",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "font-awesome": "^4.7.0",
+    "http-status-codes": "^1.3.2",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^8.5.0",
     "moment": "^2.24.0",
@@ -37,6 +39,7 @@
     "multer": "^1.4.1",
     "multer-s3": "^2.9.0",
     "ng2-daterangepicker": "^2.0.12",
+    "ng2-file-upload": "^1.3.0",
     "ng2-toastr": "^4.1.2",
     "ng6-toastr-notifications": "^1.0.4",
     "ngx-image-cropper": "^1.3.8",
